# betatetris-tablebase

./: .gitignore  CMakeLists.txt  README.md  TODOLIST.md  bitboard.cpp  board.h  constexpr_helpers.h  edge.h  example_threshold  gametree.cpp  graph_gen.cpp  move_search.h  path.h  position.h  search.h
cmake/: FetchContentExclude.cmake
lua/: TetrisGYMv5.lua
python/: .gitignore  config.py  ev_var.npz  ev_var.py  evaluate.py  fceux.py  game.py  generator.py  model.py  requirements.txt  saver.py  train.py
python/tetris/: Makefile  __init__.py  board.cpp  board.h  module.cpp  python.h  setup.py  tetris.cpp  tetris.h
scripts/: board_merge.cpp  random_boards.cpp  test_speed.cpp
src/: board.h  board_set.cpp  board_set.h  compressor.h  config.cpp  config.h  constexpr_helpers.h  edge.h  evaluate.cpp  evaluate.h  files.cpp  files.h  frame_sequence.h  game.h  graph_gen.cpp  hash.h  inspect.cpp  inspect.h  io.h  io_hash.h  io_helpers.h  main.cpp  move.cpp  move.h  move_search.h  move_search_no_tmpl.h  move_search_noro.h  play.h  position.h  prune.cpp  prune.h  sample_svd.cpp  sample_svd.h  sample_train.cpp  sample_train.h  search.h  server.cpp  server.h  simulate.cpp  simulate.h  (+4 more)
src/old/: gametree.cpp  search.h
test/: board_test.cpp  edge_test.cpp  evaluate_test.cpp  frame_test.cpp  frame_test.h  frame_test_1.cpp  frame_test_2.cpp  frame_test_3.cpp  game_test.cpp  io_test.cpp  move_test.cpp  naive_functions.cpp  naive_functions.h  naive_search.cpp  noro_search_test.cpp  printing.cpp  printing.h  search_test.cpp  search_test.h  search_test_1.cpp  search_test_2.cpp  search_test_3.cpp  search_test_4.cpp  search_test_5.cpp  test_boards.cpp  test_boards.h
